dx/9cutil-backend/network.tf
data "aws_availability_zones" "available" { state = "available" }

locals {
  azs_count = 2
  azs_names = data.aws_availability_zones.available.names
}

# resource "aws_vpc" "main" {
#   cidr_block           = "10.10.0.0/16"
#   enable_dns_hostnames = true
#   enable_dns_support   = true
#   tags                 = { Name = "${local.kebab_case_prefix}-ecs-vpc" }
# }

resource "aws_subnet" "public" {
  count                   = local.azs_count
  vpc_id                  = var.vpc_id
  availability_zone       = local.azs_names[count.index]
  cidr_block              = cidrsubnet(aws_vpc.main.cidr_block, 8, 10 + count.index)
  map_public_ip_on_launch = true
  tags                    = { Name = "${local.kebab_case_prefix}-ecs-public-${local.azs_names[count.index]}" }
}
resource "aws_subnet" "private" {
  count             = local.azs_count
  vpc_id            = var.vpc_id
  availability_zone = local.azs_names[count.index]
  cidr_block        = cidrsubnet(aws_vpc.main.cidr_block, 8, 20 + count.index)
  tags              = { Name = "${local.kebab_case_prefix}-ecs-private-${local.azs_names[count.index]}" }
}

resource "aws_eip" "nat" {
  count      = local.azs_count
  depends_on = [aws_internet_gateway.main]
  tags       = { Name = "${local.kebab_case_prefix}-ecs-nat-eip-${local.azs_names[count.index]}" }
}

resource "aws_nat_gateway" "main" {
  count         = local.azs_count
  allocation_id = aws_eip.nat[count.index].id
  subnet_id     = aws_subnet.public[count.index].id
  tags          = { Name = "${local.kebab_case_prefix}-ecs-nat-${local.azs_names[count.index]}" }
}

resource "aws_internet_gateway" "main" {
  vpc_id = var.vpc_id
  tags   = { Name = "${local.kebab_case_prefix}-ecs-igw" }
}

resource "aws_route_table" "public" {
  vpc_id = var.vpc_id
  tags   = { Name = "${local.kebab_case_prefix}-ecs-rt-public" }

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
}

resource "aws_route_table_association" "public" {
  count          = local.azs_count
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}
resource "aws_route_table" "private" {
  vpc_id = var.vpc_id
  tags   = { Name = "${local.kebab_case_prefix}-ecs-rt-private" }

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main[0].id
  }
}

resource "aws_route_table_association" "private" {
  count          = local.azs_count
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
